<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Push It</string>
    <string name="edit_item">Edit Article</string>
    <string name="item_text_label">Article Text</string>
    <string name="item_title_label">Title</string>
    <string name="item_author_label">Author</string>
    <string name="item_image_label">Article Image</string>
    <string name="item_time_label">Article Publication Time</string>
    <string name="item_title_hint">Enter Article Title</string>
    <string name="item_author_hint">Enter Article Author (Optional)</string>
    <string name="item_text_hint">Write Here Your Article</string>
    <string name="add_text_hint">Add Text Segment</string>
    <string name="set_image">Set Article Image</string>
    <string name="remove_image">Remove Image</string>
    <string name="remove_image_dialog">Are you sure you want to delete this image?\n\nIt can not be restored.</string>
    <string name="set_time">Set Publication Time</string>
    <string name="set_current_time">Set Current Time</string>
    <string name="set_original_time">Set Original Time</string>
    <string name="publication_time_dialog_button_clicked">The Article Publication Time is:\n%1$s \n\nThe article was originally created at:\n%2$s \n\nWould you like to change the article publication time?</string>
    <string name="publication_time_dialog_state_changed">Would you like to update the publication time to the current time?</string>
    <string name="add_photo">Add Photo</string>
    <string name="image_1">Image 1</string>
    <string name="image_2">Image 2</string>
    <string name="set_image_1">Set Image 1</string>
    <string name="set_image_2">Set Image 2</string>
    <string name="add_video">Add Video</string>
    <string name="remove_video">Remove Video</string>
    <string name="video_1">Video 1</string>
    <string name="video_2">Video 2</string>
    <string name="set_video_1">Set Video 1</string>
    <string name="set_video_2">Set Video 2</string>
    <string name="item_save_label">Save Article</string>
    <string name="confirm_changes">Save Changes</string>
    <string name="item_mode_label">Article Mode</string>
    <string name="publish_article_push">Publish Article (Send Push)</string>
    <string name="publish_article">Publish Article</string>
    <string name="post_article">Post Article</string>
    <string name="save_draft">Save As Draft</string>
    <string name="delete_article">Delete Article</string>
    <string name="save_changes">Save Changes</string>
    <string name="publish">Publish</string>
    <string name="post">Post</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="publish_article_dialog">Are you sure you want to publish this article? \n\nYou will be now handed to create a Push Notification that will be delivered to all of your followers.</string>
    <string name="post_article_dialog">Are you sure you want to post this article? \n\nNotice that after the article will be post, it will appear on your page and everyone will be able to see it.</string>
    <string name="save_draft_dialog">Are you sure you want to save this article as a draft?</string>
    <string name="delete_article_dialog">Are you sure you want to delete this article? \n\nAll information will be lost.</string>
    <string name="save_changes_dialog">Are you sure you want to save changes? \n\nOld information will be overwritten.</string>
    <string name="save_changes_dialog_published">Are you sure you want to save changes? \n\nNote that the Push Notification that was sent can not be changed now.</string>
    <string name="publish_article_toast">The article has been published. A notification was sent to all followers</string>
    <string name="post_article_toast">Article Posted</string>
    <string name="save_draft_toast">Article Saved as draft</string>
    <string name="save_changes_toast">All Changes Saved</string>
    <string name="changes_already_saved_toast">Changes Are Already Saved</string>
    <string name="published_article_text_view">The Article Was Published</string>
    <string name="exit">Exit</string>
    <string name="exit_edit_dialog">Are you sure you want to stop editing this article? \n\nAll changes will be lost.</string>
    <string name="exit_edit_dialog_new">This article was not saved and will be deleted. \n\nAre you sure you want to exit? \n\nAll information will be lost.</string>
    <string name="exit_no_save">Exit Without Saving</string>
    <string name="exit_save">Save Changes</string>
    <string name="create_article">New Article</string>
    <string name="page_settings">Page Settings</string>
    <string name="settings">Settings</string>
    <string name="create_notification">Create Notification</string>
    <string name="push_image_label">Notification Image</string>
    <string name="push_title_label">Notification Title</string>
    <string name="push_title_hint">Enter Notification Title</string>
    <string name="push_check_box_label">Same as the article title</string>
    <string name="set_push_image">Set Notification Image</string>
    <string name="publish_button">Publish Article</string>
    <string name="publish_notification_dialog">Are you sure you want to publish this article? \n\nNotice that publishing the article will deliver a Push Notification to all of the users who follow you. \n\nThis Notification can not be deleted.</string>
    <string name="exit_notification_dialog">Are you sure you want to exit? \n\nThe article will not be published.</string>
    <string name="no_title_toast">You Must Give a Title to Your Article!</string>
    <string name="no_text_toast">You Must Give Text to Your Article!</string>
    <string name="no_notification_title_toast">You Must Give a Title to Your Notification!</string>
    <string name="no_page_name_toast">A Page Must Have a Name!</string>
    <string name="page_design">Page Design</string>
    <string name="page_name">Page Name</string>
    <string name="choose_name_summary">Click to set the page name</string>
    <string name="page_description">Page Description</string>
    <string name="choose_description_summary">Click to set the page description</string>
    <string name="page_layout">Page Layout</string>
    <string name="choose_layout_summary">Click to choose the page layout</string>
    <string name="page_logo">Page Logo</string>
    <string name="choose_logo_summary">Click to set the page logo</string>
    <string name="explore">Explore</string>
    <string name="set_page_logo">Set Page Logo</string>
    <string name="no_logo">No Logo Has Been Set</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="account_login">Account Login</string>
    <string name="account_title">My Account</string>
    <string name="account_status">Account Status</string>
    <string name="account_settings">Account Settings</string>
    <string name="update_email">Update Email Address</string>
    <string name="update_password">Update Password</string>
    <string name="status_creator">Content Creator</string>
    <string name="status_follower">Content Follower</string>
    <string name="account_page">My Page Settings</string>
    <string name="delete_page">Delete Page</string>
    <string name="delete_account">Delete Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="create">Create</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Create New Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="wrong_credentials">Wrong email or password.</string>
    <string name="login_progress_dialog">Logging In...</string>
    <string name="login_account">Login to Existing Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_progress_dialog">Creating New Account...</string>
    <string name="account_created">Account Created</string>
    <string name="account_created_toast">Account was successfully created.</string>
    <string name="logged_in">Successfully logged in.</string>
    <string name="sign_out_progress_dialog">Signing Out...</string>
    <string name="delete_account_dialog_creator">Are you sure you want to delete this account?\n\nAll of your page data including all of the articles you created will be lost forever.</string>
    <string name="delete_account_dialog_follower">Are you sure you want to delete this account?\n\nAll of your account data including the pages you follow will be lost.</string>
    <string name="delete_page_dialog">Are you sure you want to delete this page?\n\nAll of your page data including all of the articles you created will be lost.</string>
    <string name="create_page">Create Page</string>
    <string name="create_page_dialog">Would you like to create your own page and become a Content Creator?</string>
    <string name="continue_button">Continue</string>
    <string name="create_new_page">Create New Page</string>
    <string name="create_page_done_dialog">Your new page has been created.\n\nYou will be now moved to the page settings screen, in which you may configure your page layout and set your page logo.</string>
    <string name="done">Done</string>
    <string name="page_details_dialog_1">Pick a name for your new page.</string>
    <string name="page_details_dialog_2">You can change your page name and description at any time at the page settings screen.</string>
    <string name="sign_out_dialog">Are you sure you want to sign out?</string>
    <string name="page_created">Page Created</string>
    <string name="restore_page">Restore Page</string>
    <string name="restore_page_dialog">Would you like to restore your previous page?\n\nIf you choose to create a new page, it won\'t be possible to recover your previous data.</string>
    <string name="restore">Restore</string>
    <string name="enter_valid_email">Enter a valid email address</string>
    <string name="enter_valid_password">Enter a 6-characters password</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="enter_page_name">Enter page name</string>
    <string name="enter_valid_page_name">You must enter a valid page name</string>
    <string name="delete_page_progress_dialog">Deleting Page...</string>
    <string name="delete_account_progress_dialog">Deleting Account...</string>
    <string name="no_articles">No Articles</string>
    <string name="add_article">Add Article</string>
    <string name="follow_page">Follow Page</string>
    <string name="unfollow_page">Unfollow Page</string>
    <string name="follow">Follow</string>
    <string name="login_to_follow">Login to Follow Pages</string>
    <string name="no_pages">No Pages Are Followed</string>
    <string name="no_followers">No Followers</string>
    <string name="page_followers">Page Followers</string>
    <string name="page_privacy">Private Mode</string>
    <string name="public_page_summary">Your page is public and can be seen by every one.</string>
    <string name="private_page_summary">Your page is private and can be seen by approved users only.</string>
    <string name="public_page">Public Page</string>
    <string name="private_page">Private Page</string>
    <string name="public_page_dialog">Are you sure you want to make your page public?\n\nEveryone will be able to see it.</string>
    <string name="following_requests">Following Requests</string>
    <string name="following_users">Following Users</string>
    <string name="accept_request">Accept</string>
    <string name="reject_request">Reject</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="app_help">What is Push It?</string>
</resources>