<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/pushTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/push_title_label" />

    <EditText
        android:id="@+id/pushTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:hint="@string/push_title_hint" />

    <CheckBox
        android:id="@+id/pushTitleCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/push_check_box_label" />

    <TextView
        android:id="@+id/pushImageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/push_image_label" />

    <ImageView
        android:id="@+id/pushImageView"
        android:layout_width="360dp"
        android:layout_height="180dp"
        android:layout_margin="16dp"
        android:adjustViewBounds="true"
        android:src="@drawable/notification_template"
        android:scaleType="fitCenter" />

    <Button
        android:id="@+id/pushImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/set_push_image" />

    <Button
        android:id="@+id/publishButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="64dp"
        android:backgroundTint="@color/niceBlue"
        android:text="@string/publish_button"
        android:textColor="@color/specialButtonTextColor"
        android:textSize="16sp" />
</LinearLayout>