<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.liadk.android.pushit.EditItemFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/titleEditText"
            android:hint="@string/item_title_hint"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/authorEditText"
            android:hint="@string/item_author_hint"
            android:importantForAutofill="no"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_image_label"
            android:layout_marginTop="16dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            tools:ignore="RtlSymmetry">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <Button
                    android:id="@+id/setImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/set_image" />

                <Button
                    android:id="@+id/removeImageButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/remove_image"
                    android:visibility="gone" />
            </LinearLayout>

            <ImageView
                android:id="@+id/itemImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:adjustViewBounds="true"
                android:scaleType="fitStart"
                android:src="@drawable/image_template"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_time_label"
            android:layout_marginTop="8dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_time"
                    android:id="@+id/setTimeButton"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/cardTime"
                    android:layout_marginLeft="32dp"
                    android:layout_margin="8dp"
                    android:layout_marginStart="32dp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_text_label"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/mainItemEditText"
            android:hint="@string/item_text_hint"
            android:layout_marginBottom="8dp"
            android:importantForAutofill="no" />

        <LinearLayout
            android:id="@+id/image1LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                android:visibility="visible"
                tools:ignore="RtlSymmetry">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/setImage1Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/set_image_1" />

                    <Button
                        android:id="@+id/removeImage1Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/remove_image" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/image1ImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitStart"
                    android:src="@drawable/image_template"
                    tools:ignore="ContentDescription" />

            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/seg1EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/add_text_hint"
            android:inputType="textMultiLine"
            android:importantForAutofill="no"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/image2LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                android:visibility="visible"
                tools:ignore="RtlSymmetry">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/setImage2Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/set_image_2" />

                    <Button
                        android:id="@+id/removeImage2Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/remove_image" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/image2ImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitStart"
                    android:src="@drawable/image_template"
                    tools:ignore="ContentDescription" />
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/seg2EditText"
            android:hint="@string/add_text_hint"
            android:layout_marginBottom="8dp"
            android:importantForAutofill="no"
            android:visibility="gone" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_photo"
            android:id="@+id/addPhotoButton"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/saveChangesLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="4dp"
                android:text="@string/item_save_label" />

            <Button
                android:id="@+id/confirmChangesButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:text="@string/confirm_changes" />
        </LinearLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_mode_label"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/published_article_text_view"
                android:layout_margin="8dp"
                android:id="@+id/publishedTextView"
                android:gravity="center"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/publish_article_push"
                android:id="@+id/publishButton"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/post_article"
                android:id="@+id/createButton"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_draft"
            android:id="@+id/draftButton"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_article"
            android:id="@+id/deleteButton"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:backgroundTint="@color/colorDelete"
            android:textColor="@color/specialButtonTextColor"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>
</ScrollView>