<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pushit_logo"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:adjustViewBounds="true"
        android:cropToPadding="false"/>


    <EditText
        android:id="@+id/currentPasswordEditText"
        android:hint="@string/current_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/newPasswordEditText"
        android:hint="@string/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="4dp"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:hint="@string/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="4dp"
        android:inputType="textPassword"
        android:imeOptions="actionDone"/>

    <Button
        android:id="@+id/updatePasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/update_password"/>
</LinearLayout>